syntax = "proto3";

package proto;
option go_package = "edge-grid/api/proto";

message TaskRequest {
    string task_id = 1;
    bytes wasm_binary = 2;
    bytes input_data = 3;
}

message TaskResponse {
    string task_id = 1;
    string worker_id = 2;
    bytes output_data = 3;
    string error = 4;
}